1) Wrapped all relevant System.out/err in Log calls, to route properly during maven builds, 2) Introduction of "core" build profile, which builds commons.lang, util, maven & test to fix circular dependency issues.